--- a/indexx.html
+++ b/indexx.html
@@ -8,7 +8,7 @@
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
-            background: url('https://source.unsplash.com/1600x900/?basketball,streetwear') no-repeat center center/cover;
+            background: url(https://imgur.com/a/2r6KYHO) no-repeat center center/cover;
             margin: 0;
             padding: 0;
             display: flex;
