--- a/indexx.html
+++ b/indexx.html
@@ -11,7 +11,7 @@
             padding: 0;
             font-family: 'Arial', sans-serif;
             text-align: center;
-            background: url(https://source.unsplash.com/1600x900/?basketball) no-repeat center center/cover;
+            background: url(/mnt/data/image.png) no-repeat center center/cover;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -73,4 +73,3 @@
     </div>
 </body>
 </html>
-
